Created Form on Contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -51,10 +51,10 @@
         <!--Hero image / parallax-->
         <div id="introParallax" class="container-fluid">
             <div class="row">
-                <div id="contactUsImg">
+                <div id="contactUsImg" class="intro-parallax-img">
                     <div class="d-flex justify-content-center">                
                         <div class="titleCardTitleBackground">
-                            <h2 class="card-title intro-title">Contact <span class="accent">Us</span></h2>
+                            <h2 class="card-title intro-title" style="color: white;">Contact <span class="accent">Us</span></h2>
                         </div>
                     </div>
                 </div>
@@ -62,7 +62,69 @@
         </div>
         <!-- END OF Hero image / parallax-->
 
-         <!-- Footer -->
+        <!-- Intro Text -->
+        <div class="d-flex justify-content-center" style="margin-top: 100px;">
+            <p class="contact-intro-text">
+                Feel free to give us a call with any of your qestions or wonders about. the pet sitting needs you have today.
+                I don't know what else to say so here it goes. bye. LIKE A BATEL EFRSEFH FS HFOHFEOIFH ESDBF DFB DSFHGSEOIFGH 
+                S EFHSEDSEHFSEHFSEIHFS FSEFSEFHSEFHE; F EFEGSDGRSDG  ERFEFSGRGG . GS SGS  FGS  FG SFG S  GS ERFS.S E RF
+            </p>
+        </div>
+        <div class="d-flex justify-content-center" style="margin-top: 60px;">
+            <p class="contact-intro-subtext">
+                If you are interested in booking with us check out our <a href="#">Let's Meet</a> page and find out 
+                everything that is needed for a meet and greet before hand.
+            </p>
+        </div>
+        <!-- END OF Intro Text -->
+        
+        <!-- Get In Touch Section-->
+        <div class="container-fluid get-in-touch__container">
+            <div class="row get-in-touch__row">
+                <div class="col-md get-in-touch__message-us">
+                    <div class="d-flex justify-content-center"><h3> Message Us </h3></div>
+                    <div class="d-flex justify-content-center"><p>Please fill out this form and we will be in touch!</p></div>
+                    <div class="get-in-touch__form">
+                        <form>
+                            <div class="form-group">
+                              <label for="inputName">Name</label>
+                              <input type="text" class="form-control" id="inputName" name="name" placeholder="First and Last Name" required>
+                            </div>
+                            <div class="form-group">
+                              <label for="inputPhone">Phone</label>
+                              <input type="tel" class="form-control" id="inputPhone" name="phone" placeholder="800-555-1234" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                              <small>Format: 800-555-1234</small>
+                            </div>
+                            <div class="form-group">
+                             <label for="inputEmail">E-Mail</label>
+                                <input type="email" class="form-control" id="inputEmail" name="email" placeholder="example@google.com" required>
+                                <small>We do not share your email with anyone.</small>
+                            </div>
+                            <div class="form-group">
+                               <label for="inputMessage">Message</label>
+                               <textarea class="form-control" id="inputMessage" rows="4"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary get-in-touch__submit-button">Submit</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md get-in-touch__get-in-touch">
+                    <div class="d-flex justify-content-center"><h3>Get In Touch </h3></div>
+                    <div class="get-in-touch__contact-info">
+                        <p>Happy Tales Pet Care</p>
+                        <div>
+                            <p style="display:inline;">Phone: &emsp;</p><a href="tel:1-989-345-1672">1-989-345-1772</a> 
+                        </div>
+                        <div>
+                            <p style="display:inline;">E-Mail: &emsp;</p><a <a href="mailto:ferella16@ymail.com?Subject=Happy%20Tales%20Inquiry" target="_top">ferrella16@ymail.com</a> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END OF Get In Touch Section-->
+        
+        <!-- Footer -->
          <footer class="page-footer font-small blue pt-4">
             <!-- Footer Links -->
             <div class="container-fluid text-center text-md-left">
