--- a/html/contact.html
+++ b/html/contact.html
@@ -9,13 +9,23 @@
         <!-- Site Title-->
         <title>Happy Tales | Contact Us</title> 
 
-        <!-- These are the links to custom fonts (Signika, Dancing Script, and Courgette),
-            Bootstrap CSS, Font Awesome Icons, and custom css in that order. -->
+        <!-- These are the links to custome fonts (Signika, Dancing Script, and Courgette),
+		 Bootstrap CSS, Font Awesome Icons, and custom css in that order. -->
         <link href="https://fonts.googleapis.com/css?family=Lato|Signika|Dancing+Script|Courgette" rel="stylesheet">
-        <link href="../../../../Assets/Plugins/bootstrap-4.1.3-dist/css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/contact.css" rel="stylesheet">
+
+        <!-- These are the javascript links to jquery, popper, TweenMax, Bootstrap, and Scroll Magic in that order. -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" async></script>
+    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" async></script>
+    <script defer src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.velocity.min.js" async></script>
+    <script defer src="js/TweenMax.min.js" async></script>
     </head>
     <body>
         <!--This is the Navbar -->
@@ -166,15 +176,7 @@
         </footer>
         <!--END OF Footer -->
 
-        <!-- These are the javascript links to jquery, popper, TweenMax, Bootstrap, and Scroll Magic in that order. -->
-        <script src="../../../../Assets/Plugins/jquery-3.4.0.js" async></script>
-        <script src="../../../../Assets/Plugins/popper.js/dist/popper.js" async></script>
-        <script src="../js/TweenMax.min.js" async></script>
-        <script src="../../../../Assets/Plugins/bootstrap-4.1.3-dist/js/bootstrap.js" async></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js" async></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js" async></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.velocity.min.js" async></script>
-        <script src="../js/aboutus.js"></script>
-        <script src="../js/contact.js"></script>
+        
+    <script src="../js/contact.js"></script>
     </body>
 </html>
