--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         to make room for the purple hr. we lower the width by half to stop it from pushing out beyond the
         border of the web page.-->
         <hr class="parallax-hr-right"/>
-        <button class="bttn-float bttn-lg bttn-jumbo">Let's Meet!</button>
+        <a href="html/contact.html" class="bttn-float bttn-lg bttn-jumbo">Let's Meet!</a>
       </div>
       <!-- This container holds the text of the jumbotron as well as the paw and lines image between the text. -->
       <section id="jumbotron-text-container">
