Finished Static Development of Services Page

--- a/html/faq.html
+++ b/html/faq.html
@@ -64,7 +64,7 @@
                 <div id="faqImg" class="intro-parallax-img">
                     <div class="d-flex justify-content-center">                
                         <div class="titleCardTitleBackground">
-                            <h2 class="card-title intro-title" style="color: white;">FAQ</h2>
+                            <h2 class="card-title intro-title" style="color: white;">Frequently Asked <span class="accent">Questions</span></h2>
                         </div>
                     </div>
                 </div>
@@ -294,6 +294,6 @@
         </footer>
         <!--END OF Footer -->
 
-        <script src="../js/letsmeet.js"></script>
+        <script src="../js/faq.js"></script>
     </body>
 </html>
