--- a/html/letsmeet.html
+++ b/html/letsmeet.html
@@ -190,7 +190,8 @@
                     </div>
                     <div class="row d-flex justify-content-center">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d729511.5797693656!2d-84.80110645733522!3d44.419732795145535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8820f753dd309057%3A0xcab1dd7828e7fc6f!2sHappy+Tales+Pet+Care!5e0!3m2!1sen!2sus!4v1556474954205!5m2!1sen!2sus" 
-                                width="550" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                width="550" height="430" frameborder="0" style="border:0" allowfullscreen>
+                        </iframe>
                     </div>
                 </div>
             </div>
