--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -55,6 +55,7 @@
                     <li class="nav-item"><a class="nav-link" href="faq.html">F.A.Q.</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                 </ul>
+            </div>
         </nav>
         <!-- END OF Navbar-->
 
