--- a/html/contact.html
+++ b/html/contact.html
@@ -55,6 +55,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">F.A.Q.</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
                 </ul>
+            </div>
         </nav>
         <!-- END OF Navbar-->
 
