Miscellaneous bug and UI fixes

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -97,7 +97,10 @@
               <h5 class="card-title">Our Story</h5>
               <p class="card-text">
                   Owner Ashley Ferrell started Happy Tales Pet Care up in March of 2018 and since then we have been we have created a huge family of Happy Tale Pack members. 
-                  We are always adapting to our customer needs to provide the best care experience possible. Before creating Happy Tales and working full time job, pet sitting has 
+                  We are always adapting to our customer needs to provide the best care experience possible. 
+                  <br>
+                  <br>
+                  Before creating Happy Tales and working full time job, pet sitting has 
                   always been a hobby for owner Ashley. So she created something she enjoyed doing to make a career out of if. At Happy Tales we love meeting and taking on new clients.
                 </p>
             </div>
@@ -146,7 +149,7 @@
             </h2>
             <!-- Section description -->
             <div id="testimonial-carousel" class="carousel slide carousel-multi-item carousel-fade" data-ride="carousel" data-interval="12000">
-            <ol class="carousel-indicators" style="z-index:0; bottom: 100px;">
+            <ol class="carousel-indicators" style="z-index:10; margin-bottom: 100px;">
                 <li data-target="#testimonial-carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#testimonial-carousel" data-slide-to="1"></li>
             </ol>
@@ -173,7 +176,6 @@
                   </i>We discovered Ashley's service this summer
                   and have used her ever since.
                 </p>
-                <a href="#" style="text-decoration: none; color:var(--mainPurple);">More</a>
               </div>
             </div>
             <!--Card-->
@@ -202,7 +204,6 @@
                   </i>Happy to recommend Ashley! She did a great job watching my
                   two Westies.
                 </p>
-                <a href="#" style="text-decoration: none; color:var(--mainPurple);">More</a>
               </div>
             </div>
             <!--Card-->
@@ -225,7 +226,6 @@
                 <hr class="testimonial-hr">
                 <!--Quotation-->
                 <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>I highly recommend Ashley! She has cared for our pet pot belly pig on-</p>
-                  <a href="#" style="text-decoration: none; color:var(--mainPurple);">More</a>
               </div>
             </div>
             <!--Card-->
@@ -251,7 +251,6 @@
                 <hr class="testimonial-hr">
                 <!--Quotation-->
                 <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Ashley did an amazing job for us! I highly recommend her.</p>
-                  <a href="#" style="text-decoration: none; color:var(--mainPurple);">More</a>
               </div>
             </div>
             <!--Card-->
@@ -275,7 +274,6 @@
                 <hr class="testimonial-hr">
                 <!--Quotation-->
                 <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Ashley was very thorough and professional, making time to-</p>
-                  <a href="#" style="text-decoration: none; color:var(--mainPurple);">More</a>
               </div>
             </div>
             <!--Card-->
@@ -298,7 +296,6 @@
                 <hr class="testimonial-hr">
                 <!--Quotation-->
                 <p class="dark-grey-text mt-4"><i class="fas fa-quote-left pr-2"></i>Happy Tales is amazing! Years of experience, AND they know-</p>
-                  <a href="#" style="text-decoration: none; color:var(--mainPurple);">More</a>
               </div>
             </div>
             <!--Card-->
@@ -321,10 +318,10 @@
         <!-- Call To Action Div-->
         <div class="container-fluid call-to-action__container" style="margin-top: 0;">
             <div class="call-to-action__h3 d-flex justify-content-center">
-                <h3> Are your friends ready to join the Happy Tales Pack?</h3>
+                <h3> Are your ready to check out what we offer?</h3>
             </div>
             <div class="call-to-action__a d-flex justify-content-center">
-                <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Set up a Meet & Greet!</a>
+                <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Services & Rates</a>
             </div>
         </div>
         <!--END OF Call To Action Div-->
