--- a/html/contact.html
+++ b/html/contact.html
@@ -50,10 +50,10 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="servicesandrates.html">Services & Rates</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Let's Meet</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Our Friends</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">F.A.Q.</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="letsmeet.html">Let's Meet</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Our Friends</a></li>
+                    <li class="nav-item"><a class="nav-link" href="faq.html">F.A.Q.</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
@@ -83,7 +83,7 @@
         </div>
         <div class="d-flex justify-content-center" style="margin-top: 60px;">
             <p class="contact-intro-subtext">
-                If you are interested in booking with us check out our <a href="#">Let's Meet</a> page and find out 
+                If you are interested in booking with us check out our <a href="letsmeet.html">Let's Meet</a> page and find out 
                 everything that is needed for a meet and greet before hand.
             </p>
         </div>
