--- a/html/faq.html
+++ b/html/faq.html
@@ -51,7 +51,7 @@
                     <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="servicesandrates.html">Services & Rates</a></li>
                     <li class="nav-item"><a class="nav-link" href="letsmeet.html">Let's Meet</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Our Friends</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Our Friends</a></li>
                     <li class="nav-item"><a class="nav-link" href="faq.html">F.A.Q.</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                 </ul>
@@ -248,7 +248,7 @@
                 <h3> Are your friends ready to join the Happy Tales Pack?</h3>
             </div>
             <div class="call-to-action__a d-flex justify-content-center">
-                <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Set up a Meet & Greet!</a>
+                <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo">Set up a Meet & Greet!</a>
             </div>
         </div>
         <!--END OF Call To Action Div-->
