--- a/html/gallery.html
+++ b/html/gallery.html
@@ -341,7 +341,7 @@
 
         <!-- Row 9-->
         <div class="row gallery_row gallery__row-9">
-            <div class="col-md gallery-img" style="top:-620px;">
+            <div class="col-md gallery-img" style="top:-630px;">
                 <img src="../img/Gallery/25_Mandie.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-25">
                     <h3>Lucy</h3>
@@ -373,7 +373,7 @@
 
         <!-- Row 9-->
         <div class="row gallery_row gallery__row-10">
-            <div class="col-md gallery-img" style="top:250px;">
+            <div class="col-md gallery-img" style="top:255px;">
                 <img src="../img/Gallery/28_Maverick.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-28">
                     <h3>Lucy</h3>
@@ -382,7 +382,7 @@
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
-            <div class="col-md gallery-img" style="top: -15px;">
+            <div class="col-md gallery-img" style="top: 0px;">
                 <img src="../img/Gallery/29_Velvet.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-29">
                     <h3>Luke</h3>
@@ -420,7 +420,7 @@
                 <h3> Are your friends ready to join the Happy Tales Pack?</h3>
             </div>
             <div class="call-to-action__a d-flex justify-content-center">
-                <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Set up a Meet & Greet!</a>
+                <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo">Set up a Meet & Greet!</a>
             </div>
         </div>
         <!--END OF Call To Action Div-->
