--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- END OF Navbar-->
 
         <!-- Hero Carousel-->
-        <div id="heroCarousel" class="carousel slide hero-carousel__wrapper" data-ride="carousel" data-interval="10000">
+        <div id="heroCarousel" class="carousel slide hero-carousel__wrapper" data-ride="carousel" data-interval="6000" data-pause="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-1.jpg" alt="First slide">
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-center hero-carousel__button">
-          <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Let's Meet!</a>
+          <a href="html/letsmeet.html" class="bttn-float bttn-lg bttn-jumbo">Let's Meet!</a>
       </div>
         <!-- END OF Hero Carousel-->
 
@@ -146,7 +146,7 @@
                 </p>
               </div>
               <div class="d-flex justify-content-center in-home-care__button">
-                <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Rates</a>
+                <a href="html/aboutus.html" class="bttn-float bttn-lg bttn-jumbo">About Us</a>
               </div>
             </div>
           </div>
@@ -167,8 +167,8 @@
                   Whether you have a new puppy at home, work long hours or maybe you are unable to get them out. 
                   One things for sure is that your  dogs could use a walk around your neighborhood.
                 </p>
-                <div class="d-flex justify-content-center in-home-care__button">
-                  <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
+                <div class="d-flex justify-content-center services__button">
+                  <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
                 </div>
               </div>
               <div class="col-md">
@@ -181,8 +181,8 @@
                   and TLC they need in their own home. We try to keep their daily routine and schedule 
                   as close to the same as possible.
                 </p>
-                <div class="d-flex justify-content-center in-home-care__button">
-                  <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
+                <div class="d-flex justify-content-center services__button">
+                  <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
                 </div>
               </div>
               <div class="col-md">
@@ -195,8 +195,8 @@
                   If you have a pet that you aren't sure if we service, feel free to get ahold of us. 
                   Feel free to give us a call and see if we are able to service your friend.
                 </p>
-                <div class="d-flex justify-content-center in-home-care__button">
-                  <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
+                <div class="d-flex justify-content-center services__button">
+                  <a href="html/servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Learn More</a>
                 </div>
               </div>
             </div>
@@ -340,7 +340,7 @@
             we're certain you won't regret it. Click here to contact us today!
           </p>
           <div class="d-flex justify-content-center ready-to-join__button">
-            <a href="html/contact.html" class="bttn-float bttn-lg bttn-jumbo">Contact Us</a>
+            <a href="html/letsmeet.html" class="bttn-float bttn-lg bttn-jumbo">Let's Meet</a>
           </div>
         </div>
         <!--END OF Ready To Join-->
