--- a/html/letsmeet.html
+++ b/html/letsmeet.html
@@ -51,9 +51,9 @@
                     <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="servicesandrates.html">Services & Rates</a></li>
                     <li class="nav-item"><a class="nav-link" href="letsmeet.html">Let's Meet</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Our Friends</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">F.A.Q.</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Our Friends</a></li>
+                    <li class="nav-item"><a class="nav-link" href="faq.html">F.A.Q.</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
@@ -202,10 +202,10 @@
          <!-- Call To Action Div-->
          <div class="container-fluid call-to-action__container">
             <div class="call-to-action__h3 d-flex justify-content-center">
-                <h3> Leaving your pets at home has never been easier!</h3>
+                <h3>Have a question?  We might already have an answer.</h3>
             </div>
             <div class="call-to-action__a d-flex justify-content-center">
-                <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Check out our services</a>
+                <a href="faq.html" class="bttn-float bttn-lg bttn-jumbo">Frequently Asked Questions</a>
             </div>
         </div>
         <!--END OF Call To Action Div-->
