--- a/html/servicesandrates.html
+++ b/html/servicesandrates.html
@@ -141,7 +141,7 @@
                 <h3> Are your friends ready to join the Happy Tales Pack?</h3>
             </div>
             <div class="call-to-action__a d-flex justify-content-center">
-                <a href="servicesandrates.html" class="bttn-float bttn-lg bttn-jumbo">Set up a Meet & Greet!</a>
+                <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo">Set up a Meet & Greet!</a>
             </div>
         </div>
         <!--END OF Call To Action Div-->
